# s2binlib

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  funcs.txt  gitversion.yml  s2binlib.h  vtables.txt.REMOVED.git-id
s2binlib/: Cargo.toml
s2binlib/dumper/: main.rs
s2binlib/dumper/dumpers/: gamesystem_dumper.rs  networkvar_dumper.rs  vtable_dumper.rs
s2binlib/src/: flags.rs  jit.rs  lib.rs  memory.rs  module.rs  pattern.rs  s2binlib.rs  schema.rs  view.rs  vtable.rs
s2binlib_dumper/: Cargo.toml  test.py
s2binlib_dumper/dump/windows/: gamesystem_client.txt  gamesystem_server.txt
s2binlib_dumper/dump/windows/entity_diff/: base_diff_count_client.txt  base_diff_count_server.txt
s2binlib_dumper/dump/windows/entity_diff/client/: CBaseAnimGraph.txt  CBaseFilter.txt  CCS_PortraitWorldCallbackHandler.txt  CCitadelSoundOpvarSetOBB.txt  CEnvSoundscape.txt  CEnvSoundscapeProxy.txt  CEnvSoundscapeProxyAlias_snd_soundscape_proxy.txt  CEnvSoundscapeTriggerable.txt  CEnvSoundscapeTriggerableAlias_snd_soundscape_triggerable.txt  CFilterClass.txt  CFilterMassGreater.txt  CFilterMultiple.txt  CFilterName.txt  CFilterProximity.txt  CFilterTeam.txt  CFuncWater.txt  CHostageRescueZone.txt  CInfoDynamicShadowHint.txt  CInfoDynamicShadowHintBox.txt  CInfoParticleTarget.txt  CInfoWorldLayer.txt  CLogicRelay.txt  CLogicalEntity.txt  CPathSimple.txt  CPointOrient.txt  CPointTemplate.txt  CPulseGameBlackboard.txt  CTriggerFan.txt  C_BarnLight.txt  C_BaseButton.txt  C_BaseCSGrenade.txt  C_BaseCombatCharacter.txt  C_BaseDoor.txt  C_BaseModelEntity.txt  C_BasePlayerPawn.txt  C_BasePlayerWeapon.txt  C_Beam.txt  C_Breakable.txt  C_BreakableProp.txt  C_BulletHitModel.txt  (+125 more)
s2binlib_dumper/dump/windows/entity_diff/server/: CAI_ChangeHintGroup.txt  CBaseButton.txt  CBaseCSGrenade.txt  CBaseClientUIEntity.txt  CBaseDoor.txt  CBaseGrenade.txt  CBaseModelEntity.txt  CBasePlatTrain.txt  CBasePlayerController.txt  CBasePlayerPawn.txt  CBasePlayerWeapon.txt  CBaseToggle.txt  CBeam.txt  CBlood.txt  CBreakableProp.txt  CBuyZone.txt  CC4.txt  CCSGO_TeamIntroCounterTerroristPosition.txt  CCSGO_TeamIntroTerroristPosition.txt  CCSGO_TeamPreviewCharacterPosition.txt  CCSGO_TeamSelectCounterTerroristPosition.txt  CCSGO_TeamSelectTerroristPosition.txt  CCSGO_WingmanIntroCounterTerroristPosition.txt  CCSGO_WingmanIntroTerroristPosition.txt  CCSGameRulesProxy.txt  CCSMinimapBoundary.txt  CCSPetPlacement.txt  CCSPlayerController.txt  CCSPlayerResource.txt  CCSWeaponBase.txt  CChangeLevel.txt  CChicken.txt  CCitadelSoundOpvarSetOBB.txt  CColorCorrectionVolume.txt  CCredits.txt  CDebugHistory.txt  CDynamicProp.txt  (+233 more)
s2binlib_dumper/dump/windows/vtables/: materialsystem2.json  materialsystem2_short.txt  pulse_system.txt  pulse_system_short.txt  soundsystem.txt  soundsystem.txt.REMOVED.git-id  soundsystem_short.txt
s2binlib_dumper/src/: main.rs
s2binlib_dumper/src/dumpers/: diff_dumper.rs  entity_dumper.rs  gamesystem_dumper.rs  networkvar_dumper.rs  strings_dumper.rs  vtable_dumper.rs
(+791 files in other folders)
