[package]
name = "s2binlib"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
anyhow = "1.0.100"
object = "0.37.3"
iced-x86 = "1.21"
region = "3.0"
cpp_demangle = "0.4"
msvc-demangler = "0.10"
serde = { version = "1.0", optional = true, features = ["derive"] }
libloading = "0.9.0"


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory", "Win32_System_Threading"] }
winapi = { version = "0.3", features = ["psapi", "libloaderapi", "processthreadsapi", "minwindef"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.176"

