[package]
name = "s2binlib_dumper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "s2binlib_dumper"

[dependencies]
s2binlib = { path = "../s2binlib", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.28"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
anyhow = "1.0.100"
regex = "1.12.2"
